# http-static-fs

./: Cargo.toml
src/: main.rs
