[package]
name = "http-static-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4"
mimalloc-rust = "0.2"
clap = { version = "4.4.8", features = ["derive"] }
qrcode = "0.13"
local-ip-address = "0.5.7"
env_logger = "0.11.2"
log = "0.4.20"
